[gd_scene load_steps=3 format=3 uid="uid://dbb72q773nirj"]

[ext_resource type="Script" path="res://Scenes/RoutineBuilder.gd" id="1_gekas"]
[ext_resource type="Texture2D" uid="uid://dt6drd8cw1dhl" path="res://Icons/Back.svg" id="2_0gvmh"]

[node name="RoutineBuilder" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gekas")
metadata/_edit_lock_ = true

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer2"]
layout_mode = 2
text = "Back"
icon = ExtResource("2_0gvmh")

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Routine Name"

[node name="RoutineName" type="LineEdit" parent="HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
metadata/_edit_lock_ = true

[node name="TaskList" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AddTask" type="MenuButton" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Add Task"
flat = false

[connection signal="pressed" from="HBoxContainer2/Button" to="." method="_back_pressed"]
